# BitLife

./: CMakeLists.txt  Classes1.h  Player.h  README.md  UIManager.cpp  UIManager.h  UniversalStuff.cpp  UniversalStuff.h  WorkLife.cpp  WorkLife.h  family.cpp  family.h  main.cpp  random_events.cpp  random_events.h  shop.cpp  shop.h  time_management.cpp  time_management.h
GameStuff/: GameOverStuff.cpp  GameOverStuff.h  MarketStuff.cpp  MarketStuff.h  RandomEventStuff.cpp  RandomEventStuff.h  ShopStuff.cpp  ShopStuff.h
PlayerStuff/: PlayerStuff.cpp  PlayerStuff.h
PlayerStuff/Money/: CriminalStuff.cpp  CriminalStuff.h  JobStuff.cpp  JobStuff.h
UI/: UIManager.cpp  UIManager.h
UniversalStuff/: ConsoleStuff.cpp  ConsoleStuff.h  NamingStuff.cpp  NamingStuff.h  RandomStuff.cpp  RandomStuff.h  TimeStuff.cpp  TimeStuff.h
